# containerdebug

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  pr_pre-commit.yaml
src/: main.rs
src/system_information/: disk.rs  network.rs  resources.rs  user.rs
